// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for gutter: {"base":16,"xs":24,"s":36,"m":16,"l":24,"xl":36} 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 480px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 760px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 0.5rem !important;
    padding-right: 0.5rem !important;
  }
}

@media (min-width: 1300px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1760px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gutter: 16 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}"
`;

exports[`getComponentCss() should return correct css for gutter: 24 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.75rem !important;
  padding-right: 0.75rem !important;
}"
`;

exports[`getComponentCss() should return correct css for gutter: 36 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 0% !important;
  padding-left: 1.125rem !important;
  padding-right: 1.125rem !important;
}"
`;

exports[`getComponentCss() should return correct css for offset: {"base":6,"xs":0,"s":6,"m":0,"l":6,"xl":0} 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 50% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 480px) {
  :host {
    margin-left: 0% !important;
  }
}

@media (min-width: 760px) {
  :host {
    margin-left: 50% !important;
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    margin-left: 0% !important;
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}

@media (min-width: 1300px) {
  :host {
    margin-left: 50% !important;
  }
}

@media (min-width: 1760px) {
  :host {
    margin-left: 0% !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 0 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 1 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 8.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 2 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 16.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 3 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 25% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 4 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 33.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 5 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 41.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 6 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 50% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 7 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 58.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 8 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 66.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 9 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 75% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 10 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 83.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for offset: 11 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 91.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: {"base":6,"xs":12,"s":6,"m":12,"l":6,"xl":12} 1`] = `
":host {
  box-sizing: border-box !important;
  width: 50% !important;
  min-width: 50% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 480px) {
  :host {
    width: 100% !important;
    min-width: 100% !important;
  }
}

@media (min-width: 760px) {
  :host {
    width: 50% !important;
    min-width: 50% !important;
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    width: 100% !important;
    min-width: 100% !important;
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}

@media (min-width: 1300px) {
  :host {
    width: 50% !important;
    min-width: 50% !important;
  }
}

@media (min-width: 1760px) {
  :host {
    width: 100% !important;
    min-width: 100% !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: {"base":6,"xs":12,"s":6,"m":12,"l":6,"xl":12} and offset: {"base":6,"xs":0,"s":6,"m":0,"l":6,"xl":0} 1`] = `
":host {
  box-sizing: border-box !important;
  width: 50% !important;
  min-width: 50% !important;
  margin-left: 50% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 480px) {
  :host {
    width: 100% !important;
    min-width: 100% !important;
    margin-left: 0% !important;
  }
}

@media (min-width: 760px) {
  :host {
    width: 50% !important;
    min-width: 50% !important;
    margin-left: 50% !important;
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    width: 100% !important;
    min-width: 100% !important;
    margin-left: 0% !important;
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}

@media (min-width: 1300px) {
  :host {
    width: 50% !important;
    min-width: 50% !important;
    margin-left: 50% !important;
  }
}

@media (min-width: 1760px) {
  :host {
    width: 100% !important;
    min-width: 100% !important;
    margin-left: 0% !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 1 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 1 and offset: 11 1`] = `
":host {
  box-sizing: border-box !important;
  width: 8.333333% !important;
  min-width: 8.333333% !important;
  margin-left: 91.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 2 1`] = `
":host {
  box-sizing: border-box !important;
  width: 16.666667% !important;
  min-width: 16.666667% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 2 and offset: 10 1`] = `
":host {
  box-sizing: border-box !important;
  width: 16.666667% !important;
  min-width: 16.666667% !important;
  margin-left: 83.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 3 1`] = `
":host {
  box-sizing: border-box !important;
  width: 25% !important;
  min-width: 25% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 3 and offset: 9 1`] = `
":host {
  box-sizing: border-box !important;
  width: 25% !important;
  min-width: 25% !important;
  margin-left: 75% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 4 1`] = `
":host {
  box-sizing: border-box !important;
  width: 33.333333% !important;
  min-width: 33.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 4 and offset: 8 1`] = `
":host {
  box-sizing: border-box !important;
  width: 33.333333% !important;
  min-width: 33.333333% !important;
  margin-left: 66.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 5 1`] = `
":host {
  box-sizing: border-box !important;
  width: 41.666667% !important;
  min-width: 41.666667% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 5 and offset: 7 1`] = `
":host {
  box-sizing: border-box !important;
  width: 41.666667% !important;
  min-width: 41.666667% !important;
  margin-left: 58.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 6 1`] = `
":host {
  box-sizing: border-box !important;
  width: 50% !important;
  min-width: 50% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 6 and offset: 6 1`] = `
":host {
  box-sizing: border-box !important;
  width: 50% !important;
  min-width: 50% !important;
  margin-left: 50% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 7 1`] = `
":host {
  box-sizing: border-box !important;
  width: 58.333333% !important;
  min-width: 58.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 7 and offset: 5 1`] = `
":host {
  box-sizing: border-box !important;
  width: 58.333333% !important;
  min-width: 58.333333% !important;
  margin-left: 41.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 8 1`] = `
":host {
  box-sizing: border-box !important;
  width: 66.666667% !important;
  min-width: 66.666667% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 8 and offset: 4 1`] = `
":host {
  box-sizing: border-box !important;
  width: 66.666667% !important;
  min-width: 66.666667% !important;
  margin-left: 33.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 9 1`] = `
":host {
  box-sizing: border-box !important;
  width: 75% !important;
  min-width: 75% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 9 and offset: 3 1`] = `
":host {
  box-sizing: border-box !important;
  width: 75% !important;
  min-width: 75% !important;
  margin-left: 25% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 10 1`] = `
":host {
  box-sizing: border-box !important;
  width: 83.333333% !important;
  min-width: 83.333333% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 10 and offset: 2 1`] = `
":host {
  box-sizing: border-box !important;
  width: 83.333333% !important;
  min-width: 83.333333% !important;
  margin-left: 16.666667% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 11 1`] = `
":host {
  box-sizing: border-box !important;
  width: 91.666667% !important;
  min-width: 91.666667% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 11 and offset: 1 1`] = `
":host {
  box-sizing: border-box !important;
  width: 91.666667% !important;
  min-width: 91.666667% !important;
  margin-left: 8.333333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 12 1`] = `
":host {
  box-sizing: border-box !important;
  width: 100% !important;
  min-width: 100% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: 12 and offset: 0 1`] = `
":host {
  box-sizing: border-box !important;
  width: 100% !important;
  min-width: 100% !important;
  margin-left: 0% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
}
@media (min-width: 760px) {
  :host {
    padding-left: 0.75rem !important;
    padding-right: 0.75rem !important;
  }
}

@media (min-width: 1000px) {
  :host {
    padding-left: 1.125rem !important;
    padding-right: 1.125rem !important;
  }
}
"
`;
